--- a/views/form.html.mustache
+++ b/views/form.html.mustache
@@ -30,7 +30,7 @@
                   {{/input_text}}
                   {{#select}}
                   <select id="{{field}}" name="{{field}}" tabindex="{{count}}">
-                    <option selected>{{#param_tag}}{{field}}{{/param_tag}}</option>
+                    <!--option selected>{{#param_tag}}{{field}}{{/param_tag}}</option-->
                   {{#options}}
                   {{#value}}
                     <option value="{{value}}">
