Add local images

--- a/sass/illiad.scss
+++ b/sass/illiad.scss
@@ -1,3 +1,4 @@
+$images_url: "/illiad/images";
 // Import base variables and mixins which bobcat and sub layouts use
 @import "lib/eshelf";
 
@@ -30,8 +31,8 @@
       margin-left: 0;
       padding-left: 0;
       border: 0;
-      .field { 
-        @include clearfix; 
+      .field {
+        @include clearfix;
         border-top: $border_content_list;
         padding: $padding_tiny 0 0 0;
         margin: 0 0 $padding_tiny 0;
@@ -63,7 +64,7 @@
       }
       .request_buttons {
     	  text-align: right;
-    	  @include clearfix; 
+    	  @include clearfix;
       }
     }
   }
@@ -79,7 +80,7 @@
     .statusInformation { color: black; }
   }
   .validationError { color: red; }
-  #transactionMenu { 
+  #transactionMenu {
     border-top: $border_thin;
     border-bottom: $border_thin;
     font-weight: bold;
@@ -112,4 +113,3 @@ body {
   &#ElectronicDelivery { section.sidebar a#view_electronic { @include selected; } }
   &#ViewNotifications { section.sidebar a#view_notifications { @include selected; } }
 }
-
