--- a/views/include_header.html.mustache
+++ b/views/include_header.html.mustache
@@ -1,5 +1,7 @@
 <header>
-  <a href="http://library.nyu.edu/" id="hd_link_to_home"></a>
+  <a href="https://library.nyu.edu" target="_blank">
+    <img src="/images/nyulibraries-logo.svg" alt="NYU Libraries" width="233" height="30" />
+  </a>
   <h1><span>{{application_name}}</span></h1>
   <nav>
     <ul class="breadcrumbs">
