--- a/sass/illiad.scss
+++ b/sass/illiad.scss
@@ -1,7 +1,7 @@
 $images_url: "/illiad/images";
 // Import base variables and mixins which bobcat and sub layouts use
 @import "lib/eshelf";
-@import "../javascripts/lib/jquery/plugins/css/tip-custom-yellow";
+@import "javascripts/lib/jquery/plugins/css/tip-custom-yellow.css";
 
 // Styles specific to ILLiad sub styles of eshelf and bobcat
 
