--- a/sass/illiad.scss
+++ b/sass/illiad.scss
@@ -1,6 +1,7 @@
 $images_url: "/illiad/images/";
 // Import base variables and mixins which bobcat and sub layouts use
 @import "lib/eshelf";
+@import "lib/nyulibraries_gray/jquery-ui";
 
 // Styles specific to ILLiad sub styles of eshelf and bobcat
 
