Reorder homepage tables and add header

--- a/views/table.html.mustache
+++ b/views/table.html.mustache
@@ -1,3 +1,4 @@
+        {{#page_header}}<h2>{{{page_header}}}</h2>{{/page_header}}
         {{#filter_by}}
         {{#actions}}
         <form action="{{filter_action}}" method="{{filter_method}}">
