--- a/views/form.html.mustache
+++ b/views/form.html.mustache
@@ -4,14 +4,14 @@
             <input type="hidden" name="{{name}}" value="{{{value}}}" />
             {{/hidden_fields}}
             <h2>{{{form_header}}}</h2>
-            <div><span class="{{required_class}}">{{{required_indicator}}}</span> {{{required_text}}}</div>	
+            <div><span class="{{required_class}}">{{{required_indicator}}}</span> {{{required_text}}}</div>
             <fieldset>
               {{#sub_header}}<h3>{{sub_header}}</h3>{{/sub_header}}
                   <div class="status_container">
                   {{{status}}}
                   </div>
                 {{{pre_form_text}}}
-                {{#form_fields}}	
+                {{#form_fields}}
                 <div class="field">
                   <label for="{{field}}">
                   {{#required}}
@@ -23,10 +23,10 @@
                   {{/note}}
                   </label>
                   {{#textarea}}
-                  <textarea id="{{field}}" name="{{field}}" tabindex="{{count}}">{{#param_tag}}{{field}}{{/param_tag}}</textarea>
+                  <textarea id="{{field}}" name="{{field}}" tabindex="{{count}}"{{#maxlength}} maxlength="{{maxlength}}"{{/maxlength}}>{{#param_tag}}{{field}}{{/param_tag}}</textarea>
                   {{/textarea}}
                   {{#input_text}}
-                  <input type="text" id="{{field}}" name="{{field}}" class="text{{#title}} defaultText{{/title}}" tabindex="{{count}}" value="{{#param_tag}}{{field}}{{/param_tag}}"{{#title}} title="{{title}}"{{/title}} />
+                  <input type="text" id="{{field}}" name="{{field}}" class="text{{#title}} defaultText{{/title}}" tabindex="{{count}}" value="{{#param_tag}}{{field}}{{/param_tag}}"{{#title}} title="{{title}}"{{/title}}{{#maxlength}} maxlength="{{maxlength}}"{{/maxlength}} />
                   {{/input_text}}
                   {{#select}}
                   <select id="{{field}}" name="{{field}}" tabindex="{{count}}">
@@ -44,7 +44,7 @@
                   {{/value}}
                   {{/options}}
                   </select>
-                  {{/select}}	
+                  {{/select}}
                 </div>
                 {{/form_fields}}
                 {{#footer}}
@@ -53,7 +53,7 @@
                   {{{footer}}}
                 </p>
                 </div>
-                {{/footer}} 
+                {{/footer}}
               {{{request_buttons}}}
             </fieldset>
           </form>
