Remove NS push test

--- a/institutions/ZMU/views/include_header.html
+++ b/institutions/ZMU/views/include_header.html
@@ -5,7 +5,7 @@
 </header>
 <nav>
   <ul class="breadcrumbs">
-    <li><a href="https://library.nyu.edu">The New School Libraries cha cha</a></li>
+    <li><a href="https://library.nyu.edu">The New School Libraries</a></li>
     <li><a href="http://bobcat.library.nyu.edu">BobCat</a></li>
     <li class="last">E-Shelf</li>
   </ul>
