Updated ZMU institution files

--- a/institutions/ZMU/views/NewAuthRegistration.html
+++ b/institutions/ZMU/views/NewAuthRegistration.html
@@ -3,7 +3,7 @@
   <head> 
     <meta charset="utf-8" />
     <title>
-      BobCat - ILL - Welcome to NYU Interlibrary Loan Request System
+      BobCat - ILL - Welcome to The New School Libraries' Interlibrary Loan Request System
     </title> 
     <#INCLUDE filename="include_meta.html">
     <#INCLUDE filename="include_stylesheets.html">
@@ -18,7 +18,7 @@
            
       
       <section id="content" class="content">
-                    <h2>Welcome to NYU Interlibrary Loan Request System</h2>
+                    <h2>Welcome to The New School Libraries' Interlibrary Loan Request System</h2>
               <div class="text_section" id="status">
               
                 <div class="status_container"><#STATUS></div>
@@ -31,7 +31,7 @@
                 <p>Under certain conditions specified in the law, libraries and archives are authorized to furnish a photocopy or other reproduction. One of these specified conditions is that the photocopy or reproduction is not to be &quot;used for any purpose other than private study, scholarship, or research&quot;. If a user makes a request for, or later uses, a photocopy or reproduction for purposes in excess of &quot;fair use&quot;, that user may be liable for copyright infringement.</p>
                 <p>NYU Interlibrary Loan reserves the right to refuse to accept a copying order if, in its judgment, fulfillment of the order would involve violation of copyright law.</p>
                 <h4>Questions?</h4>
-                <p>Contact NYU Interlibrary Loan at (212) 998-2511 Monday - Friday, 9 a.m. - 5 p.m. EST, or email <a href="mailto:ill@library.nyu.edu">ill@library.nyu.edu</a> at any time.
+                <p>For assistance, please visit our <a href="http://answers.library.newschool.edu">Ask Us</a> service or email <a href="mailto:libhelp@newschool.edu">libhelp@newschool.edu</a> at any time.
                 <p>Thank you for using Interlibrary Loan.</p>
                 <form style="background-color: #EFF0E8;" action="illiad.dll" method="post" name="NewAuthRegistration" class="f-wrap-request">
           <input type="hidden" name="ILLiadForm" value="NewAuthRegistration">
