change pickup Locations

--- a/institutions/ZMU/views/BookChapterRequest.html
+++ b/institutions/ZMU/views/BookChapterRequest.html
@@ -125,32 +125,14 @@
                   </label>
                   <select id="ShippingOptions" name="ShippingOptions" tabindex="13">
                     <option selected><#PARAM name="ShippingOptions"></option>
-                    <option value="NYU Bobst">
-                      NYU Bobst
+                    <option value="New School List Center Library">
+                      New School List Center Library
                     </option>
-                    <option value="NYU Abu Dhabi">
-                      NYU Abu Dhabi
+                    <option value="New School Performing Arts Library">
+                      New School Performing Arts Library
                     </option>
-                    <option value="NYU Shanghai">
-                      NYU Shanghai
-                    </option>
-                    <option value="NYU Bern Dibner">
-                      NYU Bern Dibner
-                    </option>
-                    <option value="NYU Courant">
-                      NYU Courant
-                    </option>
-                    <option value="NYU Institute of Fine Arts">
-                      NYU Institute of Fine Arts
-                    </option>
-                    <option value="NYU Inst Study Ancient World">
-                      NYU Inst Study Ancient World
-                    </option>
-                    <option value="NYU Jack Brause">
-                      NYU Jack Brause
-                    </option>
-                    <option value="NYU Lapidus Health Sciences">
-                      NYU Lapidus Health Sciences
+                    <option value="New School University Center Library">
+                      New School University Center Library
                     </option>
                   </select>
                 </div>
