updates to favion and changes to menu links for Primo

--- a/institutions/ZMU/views/include_menu.html
+++ b/institutions/ZMU/views/include_menu.html
@@ -2,9 +2,8 @@
   <menu id="shelf" class="box">
       <h2>My Shelf</h2>
       <ul id="shelf_options">
-            <li><a href="https://eshelf.library.nyu.edu/account" id="account" name="account">My library account</a></li>
+            <li><a href="http://bobcat.library.nyu.edu/primo-explore/account?vid=NS2-NUI&section=overview&lang=en_US">My Account</a>
             <li><a href="https://ill.library.nyu.edu/illiad/illiad.dll" id="ill" name="ill">My interlibrary loan (ILL)</a></li>
-            <li><a href="https://eshelf.library.nyu.edu" id="records" name="records">All saved records</a></li>
       </ul>
       <ul id="request">
         <li>
