--- a/institutions/ZMU/views/include_meta.html
+++ b/institutions/ZMU/views/include_meta.html
@@ -1,1 +1,1 @@
-<link rel="SHORTCUT ICON" href="https://library.nyu.edu/favicon.ico" /><meta charset="utf-8" /><meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1" />
+<link rel="SHORTCUT ICON" href="https://library.newschool.edu/assets/img/favicon.ico" /><meta charset="utf-8" /><meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1" />
