Illiad does require the eshelf css afterall

--- a/sass/illiad.scss
+++ b/sass/illiad.scss
@@ -1,6 +1,6 @@
 $images_url: "https://cdn.library.nyu.edu/illiad/images/";
 // Import base variables and mixins which bobcat and sub layouts use
-@import "lib/bobcat5";
+@import "lib/eshelf";
 @import "lib/nyulibraries_gray/jquery-ui";
 
 // Styles specific to ILLiad sub styles of eshelf and bobcat
