Illiad also requires content scss

--- a/sass/lib/bobcat5.scss
+++ b/sass/lib/bobcat5.scss
@@ -4,9 +4,8 @@
 @import "partials/mixins";
 @import "partials/header";
 @import "partials/sidebar";
-// @import "partials/content";
+@import "partials/content";
 @import "partials/forms";
-// @import "partials/facets";
 @import "partials/footer";
 @import "partials/icons";
 
