--- a/views/layout.html.mustache
+++ b/views/layout.html.mustache
@@ -1,6 +1,13 @@
 <!DOCTYPE html> 
 <html lang="en">
   <head> 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KBMBJL7');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="utf-8" />
     <title>
       {{page_title}}
@@ -8,8 +15,20 @@
     {{{meta}}}
     {{{stylesheets}}}
     {{{javascripts}}}
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55461631-26"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-55461631-26');
+    </script>
   </head>
   <body id="{{document_id}}" class="bp two-col bobcat {{document_class}}">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBMBJL7"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="container">
       {{{ header }}}
       
