--- a/views/layout.html.mustache
+++ b/views/layout.html.mustache
@@ -29,6 +29,13 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBMBJL7"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <aside>
+      <div role="alert" class="top_banner_alert" tabindex="0">
+        <div class="orange_alert">
+        As of March 11, physical access to NYU Libraries is restricted to NYU cardholders only. <a href="https://nyulibraries.statuspage.io/incidents/vkd8y3jxr1n6" target="_blank">See more</a>
+        </div>
+      </div>
+    </aside>
     <div id="container">
       {{{ header }}}
       
