Replace old statuspage embed with custom one

--- a/views/layout.html.mustache
+++ b/views/layout.html.mustache
@@ -42,7 +42,7 @@
       
       {{{ footer }}}
     </div>
-    <script src="https://kyyfz4489y7m.statuspage.io/embed/script.js"></script>
+    <script src="https://cdn.library.nyu.edu/statuspage-embed/index.min.js"></script>
   </body>
 </html>
 
