Update change personal information form to match required func

--- a/views/form.html.mustache
+++ b/views/form.html.mustache
@@ -31,9 +31,9 @@
                   {{/input_text}}
                   {{#select}}
                   <select id="{{field}}" name="{{field}}" tabindex="{{count}}">
-                    <option selected>{{#param_tag}}{{field}}{{/param_tag}}</option>
-                  {{#options_group}}{{options_group}}{{/options_group}}
+                  {{#options_group}}{{{options_group}}}{{/options_group}}
                   {{#options}}
+                  <option selected>{{#param_tag}}{{field}}{{/param_tag}}</option>
                   {{#value}}
                     <option value="{{value}}">
                     {{#title}}
