Update URLs, labels

--- a/institutions/ZMU/views/include_header.html
+++ b/institutions/ZMU/views/include_header.html
@@ -5,8 +5,8 @@
 </header>
 <nav>
   <ul class="breadcrumbs">
-    <li><a href="https://library.nyu.edu">The New School Libraries</a></li>
-    <li><a href="http://bobcat.library.nyu.edu">BobCat</a></li>
+    <li><a href="https://library.newschool.edu">The New School Libraries</a></li>
+    <li><a href="http://bobcat.library.nyu.edu/primo-explore/search?vid=NS2-NUI">Library Catalog</a></li>
     <li class="last">E-Shelf</li>
   </ul>
   
