--- a/institutions/ZMU/views/include_menu.html
+++ b/institutions/ZMU/views/include_menu.html
@@ -30,7 +30,7 @@
           <ul>
         <li>
         
-            <form action="illiad.dll" name="Search" method="post" id="Search">
+            <form action="/illiad/ZMU/illiad.dll" name="Search" method="post" id="Search">
               <input type="hidden" name="IlliadForm" value="Search">
               <input id="SessionID" name="SessionID" type="hidden" value="<#PARAM name="{:name=>"SessionID"}">">
               <label for="SearchCriteria">
