Add notice to main menu

--- a/views/table.html.mustache
+++ b/views/table.html.mustache
@@ -1,3 +1,4 @@
+        {{#pre_header_text}}{{{pre_header_text}}}{{/pre_header_text}}
         {{#page_header}}<h2>{{{page_header}}}</h2>{{/page_header}}
         {{#filter_by}}
         {{#actions}}
