--- a/institutions/ZMU/views/Logon2.html
+++ b/institutions/ZMU/views/Logon2.html
@@ -6,7 +6,7 @@
 </head>
 <body id="type-a">
 <div id="wrap">
-  <div id="header"> <span id="site-name">ILLiad</span>
+  <div id="header"> <span id="site-name">New School Library Inter-Library Loan and Scanning Services</span>
     <div id="status"><#STATUS></div>
   </div>
   <div id="content-wrap">
@@ -16,10 +16,10 @@
             <#FORMSTATE>
 			<div id="logonform">
 				<fieldset>			
-					<h3>ILLiad Logon</h3>			
+					<h3>Logon</h3>			
 					<label for="username">
 						<span class="field">
-							<b>Username</b>
+							<b>NetID</b>
 						</span>
 						<input id="username" name="Username" type="text" class="f-name" /><br />
 					</label>			
