--- a/institutions/ZMU/views/Logon2.html
+++ b/institutions/ZMU/views/Logon2.html
@@ -36,7 +36,7 @@
 				</fieldset>
 			</div>
 		</form>
-
+        <a href="https://account.newschool.edu" target="_blank">Reset Your Password?</a><br />
 	<!--	<form action="illiad.dll?Action=10&Form=79" method="post" name="RegisterForm" id="RegisterForm">
             <#FORMSTATE>
             <a href="#" onclick="RegisterForm.submit(); return false;">First Time Users</a>
