--- a/institutions/ZMU/views/Logon.html
+++ b/institutions/ZMU/views/Logon.html
@@ -48,7 +48,7 @@
 			</div>
 		</form>
 
-		<a href="https://account.newschool.edu">Reset Your Password?</a><br />
+		<a href="https://account.newschool.edu" target="_blank">Reset Your Password?</a><br />
 		<!-- <a href="illiad.dll?Action=10&Form=79">First Time Users</a> -->
 		<div id="footer">
 			Copyright &copy; 2015 <a href="http://www.atlas-sys.com">Atlas Systems, Inc.</a> All Rights Reserved.
