--- a/institutions/ZMU/views/ArticleRequest.html
+++ b/institutions/ZMU/views/ArticleRequest.html
@@ -114,15 +114,15 @@
                   </label>
                   <select id="ShippingOptions" name="ShippingOptions" tabindex="11">
                     <option selected><#PARAM name="ShippingOptions"></option>
-                    <option value="New School List Center Library">
+                    <!-- <option value="New School List Center Library">
                       New School List Center Library
-                    </option>
-                    <option value="New School Performing Arts Library">
+                    </option> -->
+                    <option value="New School Performing Arts Library" selected>
                       New School Performing Arts Library
                     </option>
-                    <option value="New School University Center Library">
+                    <!-- <option value="New School University Center Library">
                       New School University Center Library
-                    </option>
+                    </option> -->
                   </select>
                 </div>
                 <div class="field">
