--- a/institutions/ZMU/views/EditBookChapterRequest.html
+++ b/institutions/ZMU/views/EditBookChapterRequest.html
@@ -126,15 +126,15 @@
                   </label>
                   <select id="ShippingOptions" name="ShippingOptions" tabindex="13">
                     <option selected><#PARAM name="ShippingOptions"></option>
-                   <!-- <option value="New School List Center Library">
+                   <option value="New School List Center Library">
                       New School List Center Library
-                    </option> -->
+                    </option>
                     <option value="New School Performing Arts Library">
                       New School Performing Arts Library
                     </option>
-                    <!-- <option value="New School University Center Library">
+                    <option value="New School University Center Library">
                       New School University Center Library
-                    </option> -->
+                    </option>
                   </select>
                 </div>
                 <div class="field">
