--- a/institutions/ZMU/views/include_javascripts.html
+++ b/institutions/ZMU/views/include_javascripts.html
@@ -1,3 +1,4 @@
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.19/jquery-ui.min.js"></script>
 <script type="text/javascript" src="javascripts/illiad.js"></script>
+<script src="https://cdn.userway.org/widget.js" data-account="kDhyiUigGS"></script>
